plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.6'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // SECURITY ⭐
    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Swagger
    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.3.0'

    // AWS
    implementation 'io.awspring.cloud:spring-cloud-aws-starter:3.1.1'

    implementation 'software.amazon.awssdk:s3:2.21.40'
    implementation 'software.amazon.awssdk:sts:2.21.40' // AWS STS (권장)
    implementation 'software.amazon.awssdk:auth:2.21.40'
//    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.767'


    implementation 'javax.xml.bind:jaxb-api:2.3.1'

    // ⭐ Jasypt
    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'

    // Test
    implementation 'net.datafaker:datafaker:2.4.2'

    // ModelMapper
    implementation 'org.modelmapper:modelmapper:3.1.0'
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    // Firebase ⭐
    implementation 'com.google.firebase:firebase-admin:9.1.1'
//    // Elastic Search
//    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
//    implementation 'co.elastic.clients:elasticsearch-java'

    // monitoring
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
}

tasks.named('test') {
    useJUnitPlatform()
}

bootJar {
    enabled = true
    archiveFileName = "SpringServer-0.0.1-SNAPSHOT.jar"
    launchScript() // 🚀 실행 가능한 JAR 유지
}

jar {
    enabled = false  // ❌ 일반 JAR(-plain.jar) 비활성화
}

tasks.withType(Jar).configureEach {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

springBoot {
    mainClass = 'com.example.springserver.SpringServerApplication'
}
